# flowtog

./: .gitignore  README.md  activate.cmd  flowtog-edit.cmd  flowtog.cmd  profile.cmd  pyproject.toml
examples/: flowtog.toml
src/flowtog/: __init__.py  __main__.py  collectiondirectories.py  collectiondirectorycreator.py  collectionfile.py  collectionfileimporter.py  collectionfilemover.py  collectionfilenameparser.py  collectionfiles.py  collectionmetadata.py  collectionvalidator.py  config.py  dcf_utils.py  diskusagereporter.py  filegroup.py  filegroup_utils.py  filetype.py  log_utils.py  mediachecker.py  mediapreparer.py  menu.py  metadatasession.py  metadatatype.py  numberrange.py  path_utils.py  peoplekeywordsync.py  peoplereporter.py  photoimporter.py  process_utils.py  sonyimagingedge.py  syncpeople.py  typing_utils.py  videoimporter.py
