[build-system]
requires = ["setuptools>=80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtog"
version = "1.0.0"
description = "A workflow tool for photographers."
authors = [
    { name="Riley McArdle", email="riley@mcardle.org" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
requires-python = ">=3.14"
dependencies = [
    "dataclass-binder>=0.3.5",
    "humanize>=4.15.0",
    "psutil>=7.2.2",
    "pyexiftool>=0.5.6",
    "pywinauto>=0.6.9",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.9",
    "snakeviz>=2.2.2",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length=120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "ERA001",
    "FIX",
    "TD002",
    "TD003",
    "S101",
]
